custom java runtime
fix: unix build script.
fix: update ant build to use launch4j v3.14
enh: build a custom java runtime - relies on specific jdk 11.0.16.8-hotspot
QA: added sample unit test for orderchecker map
QA: tagged as v1.16.25